Fixed flag and title overlap + added dropdown menu #69

--- a/RC-SpeechToText/ClientApp/css/site.css
+++ b/RC-SpeechToText/ClientApp/css/site.css
@@ -110,7 +110,7 @@ html, body {
     }
 
 .fileCard {
-    height: 350px;
+    position: relative;
     width: 200px;
     background-color: rgba(255, 255, 255, 1);
     border: 1px solid rgba(244, 245, 248, 1);
